# garmin-connect-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-15-garmin-agent-cli.md  2026-07-20-fix-fit-sdk-dep-and-hygiene.md  2026-07-20-pretty-print-json.md
docs/superpowers/specs/: 2026-07-15-garmin-agent-cli-design.md
src/garmin_cli/: cli.py  client.py  dates.py  output.py  projections.py  state.py
src/garmin_cli/commands/: activity.py  auth.py  badge.py  health.py  meta.py  stats.py  workout.py
src/garmin_cli/workouts/: schema.py  translate.py  units.py
tests/: conftest.py  test_client.py  test_dates.py  test_e2e_offline.py  test_output.py  test_projections.py  test_smoke.py
tests/commands/: test_activity.py  test_auth.py  test_badge.py  test_health.py  test_meta.py  test_stats.py  test_workout.py
tests/workouts/: test_schema.py  test_translate.py  test_units.py
