[project]
name = "garmin-cli"
version = "0.1.0"
description = "Agent-first CLI for Garmin Connect"
requires-python = ">=3.11"
dependencies = [
    "garminconnect",
    "typer",
    "python-toon",
    "pydantic>=2",
]

[project.scripts]
garmin = "garmin_cli.cli:app"

[dependency-groups]
dev = ["pytest"]

# Pre-built pydantic-core wheels for Android/Termux (no manylinux wheel exists
# upstream, so builds from sdist require a Rust toolchain and often fail).
# `explicit = true` keeps this out of default resolution/locking: its wheels
# are tagged as plain `linux_*` (not android-specific), so an implicit index
# would risk a regular Linux install picking up a Termux-patched wheel. It's
# also frequently behind the exact pydantic-core version pydantic pins, so it
# can't be wired in as an automatic fallback anyway — see README for the
# manual install command Termux users need.
[[tool.uv.index]]
name = "android-pydantic-core"
url = "https://eutalix.github.io/android-pydantic-core/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_cli"]
