[project]
name = "garmin-cli"
version = "0.1.1"
description = "Agent-first CLI for Garmin Connect"
requires-python = ">=3.11"
dependencies = [
    "garminconnect",
    "typer",
    "python-toon",
    "pydantic>=2",
    "garmin-fit-sdk>=21.208.0",
]

[project.scripts]
garmin = "garmin_cli.cli:app"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_cli"]
